--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
     <style>
-      .hidden {
+      #header.hidden {
         display: none;
       }
     </style>
@@ -57,7 +57,7 @@
       </div>
       <!-- end preloader -->
 
-      <header id="header" class="hidden">
+      <header id="header">
         <div
           style="
             position: fixed;
@@ -65,7 +65,6 @@
             justify-content: center;
             background-color: #fff;
             width: 100%;
-
             z-index: 10;
           "
         >
@@ -263,7 +262,7 @@
                         <span
                           style="
                             font-family: 'Satisfy';
-                            color: rgb(255, 60, 0);
+                            color: rgb(185 105 81);
                             font-size: 2rem;
                           "
                         >
@@ -275,7 +274,7 @@
                         <span
                           style="
                             font-family: 'Satisfy';
-                            color: rgb(0, 47, 255);
+                            color: rgb(149 154 93);
                             font-size: 1.5rem;
                           "
                         >
@@ -337,16 +336,8 @@
                     <h2>Wedding Ceremony</h2>
                     <ul>
                       <li>Sunday, 18 June, 2023 10:30 AM</li>
-                      <li>Thaikatil Auditorium, Chelakkara - 680586</li>
+                      <li>Thaikattil Auditorium, Chelakkara - 680586</li>
                       <li>Phone : +91 9947 885 176</li>
-
-                      <li>
-                        <a
-                          class="popup-gmaps"
-                          href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881"
-                          >See Location</a
-                        >
-                      </li>
                     </ul>
                   </div>
                   <div class="event-shape-1">
@@ -367,7 +358,7 @@
         <div class="conatiner-fluid">
           <div class="wpo-cta-item">
             <h2>We Can't Wait to See You!</h2>
-            <p>June 18,2023, Thaikatil Auditorium, Chelakkara</p>
+            <p>June 18,2023, Thaikattil Auditorium, Chelakkara</p>
           </div>
         </div>
       </div>
