--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
                   <div class="col col-lg-6 col-12">
                     <div class="story-text right-align-text">
                       <h3>First time we meet</h3>
-                      <span class="date">April 04,2018</span>
+                      <span class="date">April 04,2015</span>
                       <p>
                         In the enchanting realm of +1, where our paths
                         serendipitously intertwined, our love blossomed into an
                         extraordinary bond that has withstood the test of time,
                         culminating in a heartfelt celebration of pure love as
-                        we embark on our journey of marriage after five
+                        we embark on our journey of marriage after seven
                         beautiful years.
                       </p>
                     </div>
@@ -214,7 +214,7 @@
                     </span>
                     <div class="story-text right-align-text">
                       <h3>Nikah Day</h3>
-                      <span class="date">September 02,2022</span>
+                      <span class="date">September 08,2022</span>
                       <p>
                         Amidst the blessings of loved ones and the serenity of
                         the sacred ceremony, our hearts became one on the day of
