--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
                   <div class="col col-lg-6 col-12">
                     <div class="story-text right-align-text">
                       <h3>First time we meet</h3>
-                      <span class="date">April 04,2015</span>
+                      <span class="date">August 04,2015</span>
                       <p>
                         In the enchanting realm of +1, where our paths
                         serendipitously intertwined, our love blossomed into an
                         extraordinary bond that has withstood the test of time,
                         culminating in a heartfelt celebration of pure love as
-                        we embark on our journey of marriage after seven
+                        we embark on our journey of marriage after Eight
                         beautiful years.
                       </p>
                     </div>
