--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@
                       <h3>First time we meet</h3>
                       <span class="date">August 04,2015</span>
                       <p>
-                        In the enchanting realm of +1, where our paths
-                        serendipitously intertwined, our love blossomed into an
-                        extraordinary bond that has withstood the test of time,
-                        culminating in a heartfelt celebration of pure love as
-                        we embark on our journey of marriage after Eight
-                        beautiful years.
+                        In the magical world of +1, our paths crossed by chance,
+                        and our love grew into a remarkable connection that has
+                        endured the trials of time. Now, after eight wonderful
+                        years, we come together to celebrate our deep love and
+                        begin our journey of marriage.
                       </p>
                     </div>
                   </div>
@@ -198,7 +197,7 @@
                       <span class="date">March 2,2022</span>
                       <p>
                         In that magical moment, as the sun set and my heart
-                        brimmed with love, I knelt before you, offering a ring
+                        brimmed with love, he knelt before me, offering a ring
                         and the question that would forever shape our future:
                         "Will you marry me?" Amidst tears of joy and
                         overwhelming emotions, our souls entwined as you said
